--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Hero -->
   <section class="hero fade-in parallax">
-    <h1>Hi Big Bear ❤️</h1>
+    <h1>Hi Silly Bear ❤️</h1>
     <p>I made this just for you.</p>
   </section>
 
@@ -106,3 +106,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
