--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <br>
 <div class="music-wrapper">
   <div id="musicBtn" class="heart-btn">
-  </div>
+  <div class="heart-shape"></div>
+</div>
   <p class="music-hint">Tap the heart to play our song 🎶</p>
 </div>
 
@@ -60,7 +61,9 @@
   <section class="section fade-in">
     <h2>Open for a Surprise!</h2>
     <br>
-    <div class="heart-btn" onclick="toggleSurprise()"></div>
+    <div class="heart-btn surprise-heart" onclick="toggleSurprise()">
+  <div class="heart-shape"></div>
+</div>
     <div class="surprise" id="surpriseContent">
       💖 Surprise! 💖 <br>
       Here's a special message: I love you!<br>
