--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p>The perfect night</p>
       </div>
       <div class="card memory hover-effect">
-        <img src="images/christmas_bw.jpeg" alt="Memory 1">
+        <img src="images/mexican.jpeg" alt="Memory 1">
         <p>My favorite time with you</p>
       </div>
     </div>
