--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="surprise" id="surpriseContent">
       💖 Surprise! 💖 <br>
       Here's a special message: I love you!<br>
-      <img src="images/christmas_color.jpeg" alt="Cute couple" class="memory hover-effect" width="300">
+      <img src="images/sun.jpeg" alt="Cute couple" class="memory hover-effect" width="300">
     </div>
   </section>
 
